fix: now use std::io::Write for bounds instead of std::fmt::Write

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "xml-builder"
-version = "0.5.2"
-authors = ["LIAUD Corentin <corentin.liaud@orange.fr>"]
-description = "Easy and highly-configurable XML builder/writer"
-keywords = ["xml"]
+authors = ["LIAUD Corentin <corentinliaud26@gmail.com>"]
 categories = ["data-structures"]
-readme = "README.md"
-license = "MIT"
+description = "Easy and highly-configurable XML builder/writer"
 edition = "2021"
+keywords = ["xml"]
+license = "MIT"
+name = "xml-builder"
+readme = "README.md"
 repository = "https://github.com/cocool97/xml-builder"
+version = "0.5.3"
